--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,10 +85,14 @@ dependencies {
     implementation "io.ktor:ktor-client-logging:$ktor_version"
     implementation "ch.qos.logback:logback-classic:1.2.6"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 
     // constraint layout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+
+
 }
 kapt {
     correctErrorTypes true
