--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
-    repositories {
-        // other repositories...
-        mavenCentral()
-    }
+    ext.kotlin_version = '1.6.10'
+    repositories { mavenCentral() }
     ext {
         compose_version = '1.0.1'
     }
-
+    repositories {
+        google()
+        mavenCentral()
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.21' apply false
-
 }
 
 task clean(type: Delete) {
